--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@
 log.html
 output.xml
 report.html
+log.html
 selenium-screenshot-*.png
+*-selenium-screenshot-*.png
+.pabotsuitenames
+robot_stderr.out
+robot_stdout.out
 
 # End of https://www.toptal.com/developers/gitignore/api/robotframework
